Get 6 random movies

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,10 +2,13 @@ FROM ubuntu:16.04
 RUN apt-get update && \
     apt-get install -y python3 && \
     apt-get install -y python-pip && \
-    pip install Flask
+    pip3 install Flask && \
+    pip3 install pandas && \
+    pip3 install scipy
 ADD src /opt/src
+ADD data /opt/data
 WORKDIR /opt/src
 ENV FLASK_APP=main.py
 ENV FLASK_DEBUG=1
 EXPOSE 5000
-CMD ["python", "-m", "flask", "run", "--host=0.0.0.0"]
+CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
