--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,11 @@
 FROM ubuntu:16.04
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
 RUN apt-get update && \
     apt-get install -y python3 && \
-    apt-get install -y python-pip && \
+    apt-get install -y python3-pip && \
     pip3 install Flask && \
+    pip3 install -U flask-cors && \
     pip3 install pandas && \
     pip3 install scipy
 ADD src /opt/src
